--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<<<<<<< HEAD
-	<title>Ahra Ko CV</title>
-
-=======
 	<title>Ahra Ko</title>
-	
->>>>>>> 90e78aaabd223915ba7c3a92285dba73f4d5faab
+
 	<!-- Meta -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -36,11 +31,7 @@
 				<div class="resume-header">
 					<div class="row align-items-center">
 						<div class="resume-title col-12 col-md-6 col-lg-8 col-xl-9">
-<<<<<<< HEAD
 							<h2 class="resume-name mb-0 text-uppercase">Ahra Ko</h2>
-=======
-							<h2 class="resume-name mb-0 text-uppercase">ahra ko</h2>
->>>>>>> 90e78aaabd223915ba7c3a92285dba73f4d5faab
 							<div class="resume-tagline mb-3 mb-md-0">Social Psychologist</div>
 						</div><!--//resume-title-->
 						<div class="resume-contact col-12 col-md-6 col-lg-4 col-xl-3">
@@ -74,81 +65,32 @@
 								<h3 class="text-uppercase resume-section-heading mb-4">Education</h3>
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Arizona State University</h4>
-<<<<<<< HEAD
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Ph.D student | 2017 - Present</div>
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Ph.D. Arizona State University</h4>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end"> Tempe, AZ | 2017 - Present</div>
 
 									</div>
 									<div class="item-content">
-										<p>Evolution, Ecology, and Social Behavior Lab with Steven L. Neuberg</p>
-=======
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Ph.D. | 2017 - Present</div>
-										
-									</div>
-									<div class="item-content">
-										<p> Steven L. Neuberg | Evolution, Ecology, and Social Behavioral Lab</p>
->>>>>>> 90e78aaabd223915ba7c3a92285dba73f4d5faab
+										<p>Steven L. Neuberg | Evolution, Ecology, and Social Behavior Lab </p>
 									</div>
 								</div><!--//item-->
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Yonsei University</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Master of Arts | 2015 - 2017</div>
-<<<<<<< HEAD
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">M.A. Yonsei University</h4>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end"> Seoul, Republic of Korea | 2015 - 2017</div>
 
 									</div>
 									<div class="item-content">
-										<p>Happiness Lab with Eunkook M. Suh</p>
-										<ul class="resume-list">
-											<li>Lorem ipsum dolor sit amet, consectetuer.</li>
-											<li>Aenean commodo ligula eget dolor.</li>
-										</ul>
-=======
-										
-									</div>
-									<div class="item-content">
-										<p> Eunkook M. Suh | Happiness Lab </p>
->>>>>>> 90e78aaabd223915ba7c3a92285dba73f4d5faab
+										<p>Eunkook M. Suh | Happiness & Culture Lab</p>
 									</div>
 								</div><!--//item-->
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Senior Software Developer</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Dropbox | 2014 - 2016</div>
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">B.A. Yonsei University</h4>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end"> Seoul, Republic of Korea | 2011 - 2015</div>
 
 									</div>
 									<div class="item-content">
-										<p>Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-									</div>
-								</div><!--//item-->
-								<div class="item">
-									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Senior Developer</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Uber | 2013 - 2014</div>
-
-									</div>
-									<div class="item-content">
-										<p>Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus. </p>
-									</div>
-								</div><!--//item-->
-								<div class="item">
-									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Backend Developer</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Amazon | 2014 - 2016</div>
-
-									</div>
-									<div class="item-content">
-										<p>Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-									</div>
-								</div><!--//item-->
-								<div class="item">
-									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Frontend Developer</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Startup | 2013 - 2014</div>
-
-									</div>
-									<div class="item-content">
-										<p>Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus. </p>
+										<p> Psychology & Cognitive Science</p>
 									</div>
 								</div><!--//item-->
 
@@ -156,7 +98,7 @@
 
 
 							<section class="project-section py-3">
-								<h3 class="text-uppercase resume-section-heading mb-4">Projects</h3>
+								<h3 class="text-uppercase resume-section-heading mb-4">Publication</h3>
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Project Lorem Ipsum</h4>
