--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Family Matters: Rethinking the Psychology of Human Social Motivation</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end"><a href="https://journals-sagepub-com.ezproxy1.lib.asu.edu/doi/full/10.1177/1745691619872986" class="theme-link">Ko et al., (2020).</div>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end"><a href="https://journals-sagepub-com.ezproxy1.lib.asu.edu/doi/full/10.1177/1745691619872986" class="theme-link" target = "_blank" rel = "noopener noreferrer"> Ko et al., (2020).</a></div>
 
 									</div>
 									<div class="item-content">
