--- a/index.html
+++ b/index.html
@@ -65,27 +65,27 @@
 								<h3 class="text-uppercase resume-section-heading mb-4">Education</h3>
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Ph.D. student Arizona State University</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end"> Tempe, AZ | 2017 - 2023</div>
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Ph.D. Arizona State University</h4>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end"> Tempe, AZ | 2017 - 2023 (Expected)</div>
 
 									</div>
 									<div class="item-content">
-										<p> Evolution, Ecology, and Social Behavior Lab with Steven L. Neuberg </p>
+										<p> Steven L. Neuberg | Evolution, Ecology, and Social Behavior Lab  </p>
 									</div>
 								</div><!--//item-->
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Master of Arts. Yonsei University</h4>
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">M.A. Yonsei University</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end"> Seoul, Republic of Korea | 2015 - 2017</div>
 
 									</div>
 									<div class="item-content">
-										<p>Happiness & Culture Lab with Dr. Eunkook M. Suh </p>
+										<p> Eunkook M. Suh | Happiness & Culture Lab </p>
 									</div>
 								</div><!--//item-->
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Bachelor of Arts. Yonsei University</h4>
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">B.A. Yonsei University</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end"> Seoul, Republic of Korea | 2011 - 2015</div>
 
 									</div>
@@ -106,7 +106,7 @@
 
 									</div>
 									<div class="item-content">
-										<p> Ko, A., Pick, C. M., Kwon, J. Y., Barlev, M., Krems, J. A., Varnum, M. E., ... & Kenrick, D. T. (2020). Family matters: Rethinking the psychology of human social motivation. Perspectives on Psychological Science, 15(1), 173-201. </p>
+										<p> Ko, A., Pick, C. M., Kwon, J. Y., Barlev, M., Krems, J. A., Varnum, M. E., ... & Kenrick, D. T. (2020). Family matters: Rethinking the psychology of human social motivation. <span class = "emphasized">Perspectives on Psychological Science, 15</span>(1), 173-201. </p>
 
 
 									</div>
