--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 				<div class="resume-intro py-3">
 					<div class="row align-items-center">
 						<div class="col-12 col-md-3 col-xl-2 text-center">
-						    <img class="resume-profile-image mb-3 mb-md-0 me-md-5  ms-md-0 rounded mx-auto" src="assets/images/resume-profile.png" alt="image">
+						    <img class="resume-profile-image mb-3 mb-md-0 me-md-5  ms-md-0 rounded mx-auto" src="assets/images/Ahra Full square.png" alt="image">
 						</div>
 
 						<div class="col text-start">
-							<p class="mb-0">I'm interested in XXX. You can make a PDF version of your resume using our free Sketch template here</a>. Donec quam felis, ultricies nec, pellentesque eu. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur xx mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.  Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. </p>
+							<p class="mb-0"> I am interested in (a) how environments and cultures calibrate our goals and motivational priorities, (b) how our goals and motivational priorities calibrate the way we perceive opportunities and threats afforded by environments and cultures, and (c) how these, in turn, calibrate our social thoughts, feelings, and behaviors. My conceptual framework integrates an understanding of fundamental social motives with an affordance management approach to human psychology, in which people seek to identify and manage the opportunities and threats they encounter. Integrating these approaches provides a nuanced way of understanding a wide range of social phenomena, including the ways in which our motivations and environments interact to shape how we come to understand ourselves and others at cross-cultural, between-individual, and within-individual levels </p>
 						</div><!--//col-->
 					</div>
 				</div><!--//resume-intro-->
