--- a/index.html
+++ b/index.html
@@ -97,20 +97,20 @@
 							</section><!--//work-section-->
 
 
-							<section class="project-section py-3">
+							<section class="pulication-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">Publication</h3>
+
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Family Matters: Rethinking the Psychology of Human Social Motivation</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end"><a href="https://journals-sagepub-com.ezproxy1.lib.asu.edu/doi/full/10.1177/1745691619872986" class="theme-link" target = "_blank" rel = "noopener noreferrer"> Ko et al., (2020).</a></div>
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0"> Family Matters: Rethinking the Psychology of Human Social Motivation</h4>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end"><a href="https://journals-sagepub-com.ezproxy1.lib.asu.edu/doi/full/10.1177/1745691619872986" class="theme-link" target = "_blank" rel = "noopener noreferrer"> link </a></div>
 
 									</div>
 									<div class="item-content">
-										<p> Ko, A., Pick, C. M., Kwon, J. Y., Barlev, M., Krems, J. A., Varnum, M. E., ... & Kenrick, D. T. (2020). Family matters: Rethinking the psychology of human social motivation. <span class = "emphasized">Perspectives on Psychological Science, 15</span>(1), 173-201. </p>
-
-
+										<p> Ko, A., Pick, C. M., Kwon, J. Y., Barlev, M., Krems, J. A., Varnum, M. E., ... & Kenrick, D. T. (2020). <span class = "emphasized">Perspectives on Psychological Science, 15</span>(1), 173-201. </p>
 									</div>
 								</div><!--//item-->
+
 								<div class="item">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Project Sed Fringilla</h4>
@@ -122,6 +122,7 @@
 
 									</div>
 								</div><!--//item-->
+
 								<div class="item">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Project Praesent </h4>
@@ -133,13 +134,52 @@
 
 									</div>
 								</div><!--//item-->
-							</section><!--//project-section-->
+
+							</section><!--//publication-section-->
+
 						</div><!--//resume-main-->
 						<aside class="resume-aside col-12 col-lg-4 col-xl-3 px-lg-4 pb-lg-4">
-							<section class="skills-section py-3">
-								<h3 class="text-uppercase resume-section-heading mb-4">Skills</h3>
+							<section class="Awards-section py-3">
+								<h3 class="text-uppercase resume-section-heading mb-4">Awards</h3>
+								<ul class="list-unstyled resume-awards-list">
+									<li class="mb-3">
+										<div class="font-weight-bold">Faculty Women’s Association Distinguished Graduate Student Award</div>
+										<div class="text-muted">ASU | 2022</div>
+									</li>
+									<li>
+										<div class="font-weight-bold">Outstanding Research Award</div>
+										<div class="text-muted">ASU | 2022</div>
+									</li>
+									<li>
+										<div class="font-weight-bold">Darwyn and Marie Linder Graduate Fellowship in Social Psychology</div>
+										<div class="text-muted">ASU | 2022</div>
+									</li>
+									<li>
+										<div class="font-weight-bold">Graduate Outstanding Research Award</div>
+										<div class="text-muted">The Society for Personality and Social Psychology | 2020</div>
+									</li>
+									<li>
+										<div class="font-weight-bold">The College Graduate Excellence Award</div>
+										<div class="text-muted">ASU | 2019, 2021, 2022</div>
+									</li>
+									<li>
+										<div class="font-weight-bold">JumpStart Seed Research Grant</div>
+										<div class="text-muted">ASU Graduate and Professional Student Association | 2018</div>
+									</li>
+									<li>
+										<div class="font-weight-bold">Research Excellence Award</div>
+										<div class="text-muted">ASU | 2017</div>
+									</li>
+									<li>
+										<div class="font-weight-bold">Brain Korea 21+ Scholarship</div>
+										<div class="text-muted">Ministry of Science, ICT, and Future Planning | 2015-2017</div>
+									</li>
+								</ul>
+							</section><!--//Awards-section-->
+							<section class="honors-section py-3">
+								<h3 class="text-uppercase resume-section-heading mb-4">Awards</h3>
 								<div class="item">
-									<h4 class="item-title">Technical</h4>
+									<h4 class="item-title">Quantitative methods</h4>
 									<ul class="list-unstyled resume-skills-list">
 										<li class="mb-2">JavaScript/Angular/React/Vue</li>
 										<li class="mb-2">Python/Ruby/PHP<li>
@@ -172,19 +212,6 @@
 												<div class="resume-degree font-weight-bold">BSc Maths and Physics</div>
 												<div class="resume-degree-org text-muted">Imperial College London</div>
 												<div class="resume-degree-time text-muted">2007 - 2010</div>
-											</li>
-										</ul>
-									</section><!--//education-section-->
-									<section class="education-section py-3">
-										<h3 class="text-uppercase resume-section-heading mb-4">Awards</h3>
-										<ul class="list-unstyled resume-awards-list">
-											<li class="mb-3">
-												<div class="font-weight-bold">Award Lorem Ipsum</div>
-												<div class="text-muted">Microsoft lorem ipsum (2019)</div>
-											</li>
-											<li>
-												<div class="font-weight-bold">Award Donec Sodales</div>
-												<div class="text-muted">Oracle Aenean (2017)</div>
 											</li>
 										</ul>
 									</section><!--//education-section-->
