--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 						</div>
 
 						<div class="col text-start">
-							<p class="mb-0"> I am interested in (a) how environments and cultures calibrate our goals and motivational priorities, (b) how our goals and motivational priorities calibrate the way we perceive opportunities and threats afforded by environments and cultures, and (c) how these, in turn, calibrate our social thoughts, feelings, and behaviors. My conceptual framework integrates an understanding of fundamental social motives with an affordance management approach to human psychology, in which people seek to identify and manage the opportunities and threats they encounter. Integrating these approaches provides a nuanced way of understanding a wide range of social phenomena, including the ways in which our motivations and environments interact to shape how we come to understand ourselves and others at cross-cultural, between-individual, and within-individual levels </p>
+							<p class="mb-0"> I am interested in (a) how environments and cultures calibrate our goals and motivational priorities, (b) how our goals and motivational priorities calibrate the way we perceive opportunities and threats afforded by environments and cultures, and (c) how these, in turn, calibrate our social thoughts, feelings, and behaviors. </p>
+							<p> My conceptual framework integrates an understanding of fundamental social motives with an affordance management approach to human psychology, in which people seek to identify and manage the opportunities and threats they encounter. Integrating these approaches provides a nuanced way of understanding a wide range of social phenomena, including the ways in which our motivations and environments interact to shape how we come to understand ourselves and others at cross-cultural, between-individual, and within-individual levels </p>
 						</div><!--//col-->
 					</div>
 				</div><!--//resume-intro-->
