--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<ul class="list-unstyled mb-0">
 								<li class="mb-2"><i class="fas fa-phone-square fa-fw fa-lg me-2 "></i><a class="resume-link" href="tel:#">480 410 7425</a></li>
 								<li class="mb-2"><i class="fas fa-envelope-square fa-fw fa-lg me-2"></i><a class="resume-link" href="mailto:#">ahrako@asu.edu</a></li>
-								<li class="mb-2"><i class="fas fa-globe fa-fw fa-lg me-2"></i><a class="resume-link" href="scholar.google.com/citations?user=P9UfPOIAAAAJ&hl=en">Google Scholar</a></li>
+								<li class="mb-2"><i class="fas fa-globe fa-fw fa-lg me-2"></i><a class="resume-link" href="scholar.google.com/citations?user=P9UfPOIAAAAJ&hl=en" target = "_blank" rel = "noopener noreferrer">Google Scholar</a></li>
 								<li class="mb-0"><i class="fas fa-map-marker-alt fa-fw fa-lg me-2"></i>Tempe, AZ</li>
 							</ul>
 						</div><!--//resume-contact-->
