--- a/index.html
+++ b/index.html
@@ -143,37 +143,16 @@
 							<section class="Awards-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">Awards</h3>
 								<ul class="list-unstyled resume-awards-list">
-									<li class="mb-3">
-										<div class="font-weight-bold">Faculty Women’s Association Distinguished Graduate Student Award</div>
-										<div class="text-muted">ASU | 2022</div>
-									</li>
-									<li>
-										<div class="font-weight-bold">Outstanding Research Award</div>
-										<div class="text-muted">ASU | 2022</div>
-									</li>
-									<li>
-										<div class="font-weight-bold">Darwyn and Marie Linder Graduate Fellowship in Social Psychology</div>
-										<div class="text-muted">ASU | 2022</div>
-									</li>
-									<li>
+									<li class="mb-2">
+										<div class="font-weight-bold">Faculty Women’s Association Distinguished Graduate Student Award | ASU | 2022</div>
+										<div class="font-weight-bold">Outstanding Research Award |ASU | 2022</div>
+										<div class="font-weight-bold">Darwyn and Marie Linder Graduate Fellowship in Social Psychology | ASU | 2022</div>
 										<div class="font-weight-bold">Graduate Outstanding Research Award</div>
 										<div class="text-muted">The Society for Personality and Social Psychology | 2020</div>
-									</li>
-									<li>
-										<div class="font-weight-bold">The College Graduate Excellence Award</div>
-										<div class="text-muted">ASU | 2019, 2021, 2022</div>
-									</li>
-									<li>
-										<div class="font-weight-bold">JumpStart Seed Research Grant</div>
-										<div class="text-muted">ASU Graduate and Professional Student Association | 2018</div>
-									</li>
-									<li>
-										<div class="font-weight-bold">Research Excellence Award</div>
-										<div class="text-muted">ASU | 2017</div>
-									</li>
-									<li>
-										<div class="font-weight-bold">Brain Korea 21+ Scholarship</div>
-										<div class="text-muted">Ministry of Science, ICT, and Future Planning | 2015-2017</div>
+										<div class="font-weight-bold">The College Graduate Excellence Award | ASU | 2019, 2021, 2022</div>
+										<div class="font-weight-bold">JumpStart Seed Research Grant | ASU Graduate and Professional Student Association | 2018</div>
+										<div class="font-weight-bold">Research Excellence Award | ASU | 2017</div>
+										<div class="font-weight-bold">Brain Korea 21+ Scholarship | Ministry of Science, ICT, and Future Planning | 2015-2017</div>
 									</li>
 								</ul>
 							</section><!--//Awards-section-->
