--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<ul class="list-unstyled mb-0">
 								<li class="mb-2"><i class="fas fa-phone-square fa-fw fa-lg me-2 "></i><a class="resume-link" href="tel:#">480 410 7425</a></li>
 								<li class="mb-2"><i class="fas fa-envelope-square fa-fw fa-lg me-2"></i><a class="resume-link" href="mailto:#">ahrako@asu.edu</a></li>
-								<li class="mb-2"><i class="fas fa-globe fa-fw fa-lg me-2"></i><a class="resume-link" href="scholar.google.com/citations?user=P9UfPOIAAAAJ&hl=en" target = "_blank" rel = "noopener noreferrer">Google Scholar</a></li>
+								<li class="mb-2"><i class="fas fa-globe fa-fw fa-lg me-2"></i><a class="resume-link" href="https://scholar.google.com/citations?user=P9UfPOIAAAAJ&hl=en" target = "_blank" rel = "noopener noreferrer">Google Scholar</a></li>
 								<li class="mb-0"><i class="fas fa-map-marker-alt fa-fw fa-lg me-2"></i>Tempe, AZ</li>
 							</ul>
 						</div><!--//resume-contact-->
@@ -54,7 +54,7 @@
 
 						<div class="col text-start">
 							<p class="mb-0"> I am interested in (a) how environments and cultures calibrate our goals and motivational priorities, (b) how our goals and motivational priorities calibrate the way we perceive opportunities and threats afforded by environments and cultures, and (c) how these, in turn, calibrate our social thoughts, feelings, and behaviors. </p>
-							<p> My conceptual framework integrates an understanding of fundamental social motives with an affordance management approach to human psychology, in which people seek to identify and manage the opportunities and threats they encounter. Integrating these approaches provides a nuanced way of understanding a wide range of social phenomena, including the ways in which our motivations and environments interact to shape how we come to understand ourselves and others at cross-cultural, between-individual, and within-individual levels </p>
+							<p> </p> <p> My conceptual framework integrates an understanding of fundamental social motives with an affordance management approach to human psychology, in which people seek to identify and manage the opportunities and threats they encounter. Integrating these approaches provides a nuanced way of understanding a wide range of social phenomena, including the ways in which our motivations and environments interact to shape how we come to understand ourselves and others at cross-cultural, between-individual, and within-individual levels </p>
 						</div><!--//col-->
 					</div>
 				</div><!--//resume-intro-->
@@ -68,12 +68,12 @@
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Ph.D. Arizona State University</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end"> Tempe, AZ | 2017 - 2023 (Expected)</div>
-
 									</div>
 									<div class="item-content">
 										<p> Steven L. Neuberg | Evolution, Ecology, and Social Behavior Lab  </p>
 									</div>
 								</div><!--//item-->
+
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">M.A. Yonsei University</h4>
@@ -84,6 +84,7 @@
 										<p> Eunkook M. Suh | Happiness & Culture Lab </p>
 									</div>
 								</div><!--//item-->
+
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">B.A. Yonsei University</h4>
@@ -143,7 +144,7 @@
 							<section class="Awards-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">Awards</h3>
 								<ul class="list-unstyled resume-awards-list">
-									<li class="mb-2">
+									<li class="mb-3">
 										<div class="font-weight-bold">Faculty Women’s Association Distinguished Graduate Student Award | ASU | 2022</div>
 										<div class="font-weight-bold">Outstanding Research Award |ASU | 2022</div>
 										<div class="font-weight-bold">Darwyn and Marie Linder Graduate Fellowship in Social Psychology | ASU | 2022</div>
@@ -156,6 +157,7 @@
 									</li>
 								</ul>
 							</section><!--//Awards-section-->
+							
 							<section class="honors-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">Awards</h3>
 								<div class="item">
