--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
 				<div class="resume-intro py-3">
 					<div class="row align-items-center">
 						<div class="col-12 col-md-3 col-xl-2 text-center">
-						    <img class="resume-profile-image mb-3 mb-md-0 me-md-5  ms-md-0 rounded mx-auto" src="assets/images/Ahra Full square.jpg" alt="image">
+						    <img class="resume-profile-image mb-3 mb-md-0 me-md-5  ms-md-0 rounded mx-auto" src="assets/images/ahrako.jpg" alt="image">
 						</div>
 
 						<div class="col text-start">
 							<p class="mb-0"> I am interested in (a) how environments and cultures calibrate our goals and motivational priorities, (b) how our goals and motivational priorities calibrate the way we perceive opportunities and threats afforded by environments and cultures, and (c) how these, in turn, calibrate our social thoughts, feelings, and behaviors. </p>
-							<p> </p> <p> My conceptual framework integrates an understanding of fundamental social motives with an affordance management approach to human psychology, in which people seek to identify and manage the opportunities and threats they encounter. Integrating these approaches provides a nuanced way of understanding a wide range of social phenomena, including the ways in which our motivations and environments interact to shape how we come to understand ourselves and others at cross-cultural, between-individual, and within-individual levels </p>
+							<p> </p> <p> My conceptual framework integrates an understanding of fundamental social motives with an affordance management approach to human psychology, in which people seek to identify and manage the opportunities and threats they encounter. Integrating these approaches provides a nuanced way of understanding a wide range of social phenomena, including the ways in which our motivations and environments interact to shape how we come to understand ourselves and others at cross-cultural, between-individual, and within-individual levels. </p>
 						</div><!--//col-->
 					</div>
 				</div><!--//resume-intro-->
@@ -66,7 +66,7 @@
 								<h3 class="text-uppercase resume-section-heading mb-4">Education</h3>
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Ph.D. Arizona State University</h4>
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Ph.D. Social Psychology Arizona State University</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end"> Tempe, AZ | 2017 - 2023 (Expected)</div>
 									</div>
 									<div class="item-content">
@@ -76,7 +76,7 @@
 
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">M.A. Yonsei University</h4>
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">M.A. Social Psychology Yonsei University</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end"> Seoul, Republic of Korea | 2015 - 2017</div>
 
 									</div>
@@ -87,12 +87,12 @@
 
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">B.A. Yonsei University</h4>
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">B.A. Psychology & Cognitive Science Yonsei University</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end"> Seoul, Republic of Korea | 2011 - 2015</div>
 
 									</div>
 									<div class="item-content">
-										<p> Psychology & Cognitive Science</p>
+										<p> Exchange student: University of California, San Diego | 2013 </p>
 									</div>
 								</div><!--//item-->
 
@@ -105,11 +105,12 @@
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0"> Family Matters: Rethinking the Psychology of Human Social Motivation</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end"><a href="https://journals-sagepub-com.ezproxy1.lib.asu.edu/doi/full/10.1177/1745691619872986" class="theme-link" target = "_blank" rel = "noopener noreferrer"> link </a></div>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end"><a href="https://doi.org/10.1177/1745691619872986" class="theme-link" target = "_blank" rel = "noopener noreferrer"> LINK </a></div>
 
 									</div>
 									<div class="item-content">
-										<p> Ko, A., Pick, C. M., Kwon, J. Y., Barlev, M., Krems, J. A., Varnum, M. E., ... & Kenrick, D. T. (2020). <span class = "emphasized">Perspectives on Psychological Science, 15</span>(1), 173-201. </p>
+										<p> <strong>Ko, A.</strong>, Pick, C. M., Kwon, J. Y., Barlev, M., Krems, J. A., Varnum, M. E., ... & Kenrick, D. T. (2020)</P>
+										<P> Perspectives on Psychological Science, 15(1), 173-201. </p>
 									</div>
 								</div><!--//item-->
 
@@ -157,7 +158,7 @@
 									</li>
 								</ul>
 							</section><!--//Awards-section-->
-							
+
 							<section class="honors-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">Awards</h3>
 								<div class="item">
