--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 									</div>
 									<div class="item-content">
 										<p> <strong>Ko, A.</strong>, Pick, C. M., Kwon, J. Y., Barlev, M., Krems, J. A., Varnum, M. E., ... & Kenrick, D. T. (2020)</P>
-										<P> Perspectives on Psychological Science, 15(1), 173-201. </p>
+										<P> <i>Perspectives on Psychological Science, 15</i>(1), 173-201. </p>
 									</div>
 								</div><!--//item-->
 
