--- a/index.html
+++ b/index.html
@@ -103,26 +103,25 @@
 								<h3 class="text-uppercase resume-section-heading mb-4">Publication</h3>
 
 								<div class="item mb-3">
+
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0"> Family Matters: Rethinking the Psychology of Human Social Motivation</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end"><a href="https://doi.org/10.1177/1745691619872986" class="theme-link" target = "_blank" rel = "noopener noreferrer"> LINK </a></div>
-
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end"><a href="https://doi.org/10.1177/1745691619872986" class="theme-link" target = "_blank" rel = "noopener noreferrer"> READ </a></div>
 									</div>
+
 									<div class="item-content">
 										<p> <strong>Ko, A.</strong>, Pick, C. M., Kwon, J. Y., Barlev, M., Krems, J. A., Varnum, M. E., ... & Kenrick, D. T. (2020)</P>
 										<P> <i>Perspectives on Psychological Science, 15</i>(1), 173-201. </p>
 									</div>
 								</div><!--//item-->
 
-								<div class="item">
-									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Project Sed Fringilla</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Open Source</div>
 
-									</div>
 									<div class="item-content">
-										<p>You can use this section for your side projects. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</p>
-
+										<p> <strong>Ko, A.</strong>, Pick, C. M., Kwon, J. Y., Barlev, M., Krems, J. A., Varnum, M. E., ... & Kenrick, D. T. (2020). <strong>Family matters: Rethinking the psychology of human social motivation. </strong> <i>Perspectives on Psychological Science, 15</i>(1), 173-201.</p>
+										<ul class="resume-list">
+											<li>READ</li>
+											<li>OSF</li>
+										</ul>
 									</div>
 								</div><!--//item-->
 
