--- a/index.html
+++ b/index.html
@@ -115,6 +115,11 @@
 									</div>
 								</div><!--//item-->
 
+								<div class="item mb-3">
+
+									<div class="item-heading row align-items-center mb-2">
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0"> <strong>Ko, A.</strong>, Pick, C. M., Kwon, J. Y., Barlev, M., Krems, J. A., Varnum, M. E., ... & Kenrick, D. T. (2020). <i>Perspectives on Psychological Science, 15</i>(1), 173-201. </h4>
+									</div>
 
 									<div class="item-content">
 										<p> <strong>Ko, A.</strong>, Pick, C. M., Kwon, J. Y., Barlev, M., Krems, J. A., Varnum, M. E., ... & Kenrick, D. T. (2020). <strong>Family matters: Rethinking the psychology of human social motivation. </strong> <i>Perspectives on Psychological Science, 15</i>(1), 173-201.</p>
@@ -139,103 +144,98 @@
 
 							</section><!--//publication-section-->
 
-						</div><!--//resume-main-->
-						<aside class="resume-aside col-12 col-lg-4 col-xl-3 px-lg-4 pb-lg-4">
-							<section class="Awards-section py-3">
-								<h3 class="text-uppercase resume-section-heading mb-4">Awards</h3>
-								<ul class="list-unstyled resume-awards-list">
-									<li class="mb-3">
-										<div class="font-weight-bold">Faculty Women’s Association Distinguished Graduate Student Award | ASU | 2022</div>
-										<div class="font-weight-bold">Outstanding Research Award |ASU | 2022</div>
-										<div class="font-weight-bold">Darwyn and Marie Linder Graduate Fellowship in Social Psychology | ASU | 2022</div>
-										<div class="font-weight-bold">Graduate Outstanding Research Award</div>
-										<div class="text-muted">The Society for Personality and Social Psychology | 2020</div>
-										<div class="font-weight-bold">The College Graduate Excellence Award | ASU | 2019, 2021, 2022</div>
-										<div class="font-weight-bold">JumpStart Seed Research Grant | ASU Graduate and Professional Student Association | 2018</div>
-										<div class="font-weight-bold">Research Excellence Award | ASU | 2017</div>
-										<div class="font-weight-bold">Brain Korea 21+ Scholarship | Ministry of Science, ICT, and Future Planning | 2015-2017</div>
-									</li>
-								</ul>
-							</section><!--//Awards-section-->
-
-							<section class="honors-section py-3">
-								<h3 class="text-uppercase resume-section-heading mb-4">Awards</h3>
-								<div class="item">
-									<h4 class="item-title">Quantitative methods</h4>
-									<ul class="list-unstyled resume-skills-list">
-										<li class="mb-2">JavaScript/Angular/React/Vue</li>
-										<li class="mb-2">Python/Ruby/PHP<li>
-											<li class="mb-2">Node.js/ASP.NET</li>
-											<li class="mb-2">PostgreSQL/MySQL</li>
-											<li class="mb-2">Object-oriented design</li>
-											<li class="mb-2">Design and implement database structures</li>
-											<li>Lead and deliver complex software systems</li>
-										</ul>
-									</div><!--//item-->
+							<aside class="resume-aside col-12 col-lg-4 col-xl-3 px-lg-4 pb-lg-4">
+								<section class="skills-section py-3">
+									<h3 class="text-uppercase resume-section-heading mb-4">Skills</h3>
 									<div class="item">
-										<h4 class="item-title">Professional</h4>
+										<h4 class="item-title">Technical</h4>
 										<ul class="list-unstyled resume-skills-list">
-											<li class="mb-2">Effective communication</li>
-											<li class="mb-2">Team player<li>
-												<li class="mb-2">Strong problem solver</li>
-												<li>Good time management</li>
+											<li class="mb-2">JavaScript/Angular/React/Vue</li>
+											<li class="mb-2">Python/Ruby/PHP<li>
+												<li class="mb-2">Node.js/ASP.NET</li>
+												<li class="mb-2">PostgreSQL/MySQL</li>
+												<li class="mb-2">Object-oriented design</li>
+												<li class="mb-2">Design and implement database structures</li>
+												<li>Lead and deliver complex software systems</li>
 											</ul>
 										</div><!--//item-->
-									</section><!--//skills-section-->
-									<section class="education-section py-3">
-										<h3 class="text-uppercase resume-section-heading mb-4">Education</h3>
-										<ul class="list-unstyled resume-education-list">
-											<li class="mb-3">
-												<div class="resume-degree font-weight-bold">MSc in Computer Science</div>
-												<div class="resume-degree-org text-muted">University College London</div>
-												<div class="resume-degree-time text-muted">2010 - 2011</div>
-											</li>
-											<li>
-												<div class="resume-degree font-weight-bold">BSc Maths and Physics</div>
-												<div class="resume-degree-org text-muted">Imperial College London</div>
-												<div class="resume-degree-time text-muted">2007 - 2010</div>
-											</li>
-										</ul>
-									</section><!--//education-section-->
-									<section class="skills-section py-3">
-										<h3 class="text-uppercase resume-section-heading mb-4">Languages</h3>
-										<ul class="list-unstyled resume-lang-list">
-											<li class="mb-2">Korean <span class="text-muted">(Native)</span></li>
-											<li>English <span class="text-muted">(Professional)</span></li>
-										</ul>
-									</section><!--//certificates-section-->
-									<section class="skills-section py-3">
-										<h3 class="text-uppercase resume-section-heading mb-4">Interests</h3>
-										<ul class="list-unstyled resume-interests-list mb-0">
-											<li class="mb-2">Climbing</li>
-											<li class="mb-2">Snowboarding</li>
-											<li class="mb-2">Photography</li>
-											<li>Travelling</li>
-										</ul>
-									</section><!--//certificates-section-->
+										<div class="item">
+											<h4 class="item-title">Professional</h4>
+											<ul class="list-unstyled resume-skills-list">
+												<li class="mb-2">Effective communication</li>
+												<li class="mb-2">Team player<li>
+													<li class="mb-2">Strong problem solver</li>
+													<li>Good time management</li>
+												</ul>
+											</div><!--//item-->
+										</section><!--//skills-section-->
+										<section class="education-section py-3">
+											<h3 class="text-uppercase resume-section-heading mb-4">Education</h3>
+											<ul class="list-unstyled resume-education-list">
+												<li class="mb-3">
+													<div class="resume-degree font-weight-bold">MSc in Computer Science</div>
+													<div class="resume-degree-org text-muted">University College London</div>
+													<div class="resume-degree-time text-muted">2010 - 2011</div>
+												</li>
+												<li>
+													<div class="resume-degree font-weight-bold">BSc Maths and Physics</div>
+													<div class="resume-degree-org text-muted">Imperial College London</div>
+													<div class="resume-degree-time text-muted">2007 - 2010</div>
+												</li>
+											</ul>
+										</section><!--//education-section-->
+										<section class="education-section py-3">
+											<h3 class="text-uppercase resume-section-heading mb-4">Awards</h3>
+											<ul class="list-unstyled resume-awards-list">
+												<li class="mb-3">
+													<div class="font-weight-bold">Award Lorem Ipsum</div>
+													<div class="text-muted">Microsoft lorem ipsum (2019)</div>
+												</li>
+												<li>
+													<div class="font-weight-bold">Award Donec Sodales</div>
+													<div class="text-muted">Oracle Aenean (2017)</div>
+												</li>
+											</ul>
+										</section><!--//education-section-->
+										<section class="skills-section py-3">
+											<h3 class="text-uppercase resume-section-heading mb-4">Languages</h3>
+											<ul class="list-unstyled resume-lang-list">
+												<li class="mb-2">English <span class="text-muted">(Native)</span></li>
+												<li>Spanish <span class="text-muted">(Professional)</span></li>
+											</ul>
+										</section><!--//certificates-section-->
+										<section class="skills-section py-3">
+											<h3 class="text-uppercase resume-section-heading mb-4">Interests</h3>
+											<ul class="list-unstyled resume-interests-list mb-0">
+												<li class="mb-2">Climbing</li>
+												<li class="mb-2">Snowboarding</li>
+												<li class="mb-2">Photography</li>
+												<li>Travelling</li>
+											</ul>
+										</section><!--//certificates-section-->
 
-								</aside><!--//resume-aside-->
-							</div><!--//row-->
-						</div><!--//resume-body-->
-						<hr>
-						<div class="resume-footer text-center">
-							<ul class="resume-social-list list-inline mx-auto mb-0 d-inline-block text-muted">
-								<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="#"><i class="fab fa-github-square fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">github.com/ko-ahra</span></a></li>
-								<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="#"><i class="fab fa-linkedin fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">linkedin.com/in/username</span></a></li>
-								<li class="list-inline-item mb-lg-0 me-lg-3"><a class="resume-link" href="#"><i class="fab fa-twitter-square fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">@twittername</span></a></li>
-							</ul>
-						</div><!--//resume-footer-->
-					</article>
+									</aside><!--//resume-aside-->
+								</div><!--//row-->
+							</div><!--//resume-body-->
+							<hr>
+							<div class="resume-footer text-center">
+								<ul class="resume-social-list list-inline mx-auto mb-0 d-inline-block text-muted">
+									<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="#"><i class="fab fa-github-square fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">github.com/username</span></a></li>
+									<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="#"><i class="fab fa-linkedin fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">linkedin.com/in/username</span></a></li>
+									<li class="list-inline-item mb-lg-0 me-lg-3"><a class="resume-link" href="#"><i class="fab fa-twitter-square fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">@twittername</span></a></li>
+								</ul>
+							</div><!--//resume-footer-->
+							</article>
 
-				</div><!--//container-->
+							</div><!--//container-->
 
-				<footer class="footer text-center py-4">
-					<!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
-					<small class="copyright text-muted">Designed with <span class="sr-only">love</span><i class="fas fa-heart"></i> by <a class="theme-link" href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
-				</footer>
+							<footer class="footer text-center py-4">
+							<!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
+							<small class="copyright text-muted">Designed with <span class="sr-only">love</span><i class="fas fa-heart"></i> by <a class="theme-link" href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
+							</footer>
 
-			</div><!--//main-wrapper-->
+							</div><!--//main-wrapper-->
 
 
-</body>
-</html>
+							</body>
+							</html>
