--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 
 						<div class="col text-start">
 							<p class="mb-0"> I am interested in (a) how environments and cultures calibrate our goals and motivational priorities, (b) how our goals and motivational priorities calibrate the way we perceive opportunities and threats afforded by environments and cultures, and (c) how these, in turn, calibrate our social thoughts, feelings, and behaviors. </p>
-							<p> </p> <p> My conceptual framework integrates an understanding of fundamental social motives with an affordance management approach to human psychology, in which people seek to identify and manage the opportunities and threats they encounter. Integrating these approaches provides a nuanced way of understanding a wide range of social phenomena, including the ways in which our motivations and environments interact to shape how we come to understand ourselves and others at cross-cultural, between-individual, and within-individual levels. </p>
+							<p> </p>
+							<p> My conceptual framework integrates an understanding of fundamental social motives with an affordance management approach to human psychology, in which people seek to identify and manage the opportunities and threats they encounter. Integrating these approaches provides a nuanced way of understanding a wide range of social phenomena, including the ways in which our motivations and environments interact to shape how we come to understand ourselves and others at cross-cultural, between-individual, and within-individual levels. </p>
 						</div><!--//col-->
 					</div>
 				</div><!--//resume-intro-->
@@ -62,7 +63,7 @@
 				<div class="resume-body">
 					<div class="row">
 						<div class="resume-main col-12 col-lg-8 col-xl-9   pe-0   pe-lg-5">
-							<section class="work-section py-3">
+							<section class="education-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">Education</h3>
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
@@ -96,12 +97,25 @@
 									</div>
 								</div><!--//item-->
 
-							</section><!--//work-section-->
+							</section><!--//education-section-->
+
+							<section class="awards-section py-3">
+								<h3 class="text-uppercase resume-section-heading mb-4">Honors & Awards</h3>
+								<ul class="list-unstyled resume-education-list">
+									<li class="mb-3">
+										<div class="resume-degree font-weight-bold">Faculty Women’s Association Distinguished Graduate Student Award</div>
+										<div class="resume-degree-time text-muted">ASU | 2022</div>
+									</li>
+									<li>
+										<div class="resume-degree font-weight-bold">Outstanding Research Award</div>
+										<div class="resume-degree-time text-muted">ASU Graduate and Professional Student Association | 2022</div>
+									</li>
+								</ul>
+							</section><!--//awards-section-->
 
 
 							<section class="pulication-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">Publication</h3>
-
 								<div class="item mb-3">
 
 									<div class="item-heading row align-items-center mb-2">
@@ -169,6 +183,7 @@
 												</ul>
 											</div><!--//item-->
 										</section><!--//skills-section-->
+
 										<section class="education-section py-3">
 											<h3 class="text-uppercase resume-section-heading mb-4">Education</h3>
 											<ul class="list-unstyled resume-education-list">
@@ -184,6 +199,7 @@
 												</li>
 											</ul>
 										</section><!--//education-section-->
+
 										<section class="education-section py-3">
 											<h3 class="text-uppercase resume-section-heading mb-4">Awards</h3>
 											<ul class="list-unstyled resume-awards-list">
@@ -197,12 +213,14 @@
 												</li>
 											</ul>
 										</section><!--//education-section-->
+
 										<section class="skills-section py-3">
 											<h3 class="text-uppercase resume-section-heading mb-4">Languages</h3>
 											<ul class="list-unstyled resume-lang-list">
 												<li class="mb-2">English <span class="text-muted">(Native)</span></li>
 												<li>Spanish <span class="text-muted">(Professional)</span></li>
 											</ul>
+
 										</section><!--//certificates-section-->
 										<section class="skills-section py-3">
 											<h3 class="text-uppercase resume-section-heading mb-4">Interests</h3>
@@ -220,7 +238,7 @@
 							<hr>
 							<div class="resume-footer text-center">
 								<ul class="resume-social-list list-inline mx-auto mb-0 d-inline-block text-muted">
-									<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="#"><i class="fab fa-github-square fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">github.com/username</span></a></li>
+									<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="#"><i class="fab fa-github-square fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">github.com/ko-ahra</span></a></li>
 									<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="#"><i class="fab fa-linkedin fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">linkedin.com/in/username</span></a></li>
 									<li class="list-inline-item mb-lg-0 me-lg-3"><a class="resume-link" href="#"><i class="fab fa-twitter-square fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">@twittername</span></a></li>
 								</ul>
