--- a/index.html
+++ b/index.html
@@ -106,10 +106,42 @@
 										<div class="resume-degree font-weight-bold">Faculty Women’s Association Distinguished Graduate Student Award</div>
 										<div class="resume-degree-time text-muted">ASU | 2022</div>
 									</li>
+
 									<li>
 										<div class="resume-degree font-weight-bold">Outstanding Research Award</div>
-										<div class="resume-degree-time text-muted">ASU Graduate and Professional Student Association | 2022</div>
+										<div class="resume-degree-time text-muted">Graduate and Professional Student Association, ASU | 2022</div>
 									</li>
+
+									<li class="mb-3">
+										<div class="resume-degree font-weight-bold">Darwyn and Marie Linder Graduate Fellowship </div>
+										<div class="resume-degree-time text-muted">Department of Psychology, ASU | 2022</div>
+									</li>
+
+									<li class="mb-3">
+										<div class="resume-degree font-weight-bold">Graduate Outstanding Research Award </div>
+										<div class="resume-degree-time text-muted">The Society for Personality and Social Psychology | 2020</div>
+									</li>
+
+									<li class="mb-3">
+										<div class="resume-degree font-weight-bold">The College Graduate Excellence Award </div>
+										<div class="resume-degree-time text-muted">ASU | 2019, 2021, 2022</div>
+									</li>
+
+									<li class="mb-3">
+										<div class="resume-degree font-weight-bold">JumpStart Seed Research Grant </div>
+										<div class="resume-degree-time text-muted">Graduate and Professional Student Association, ASU | 2018</div>
+									</li>
+
+									<li class="mb-3">
+										<div class="resume-degree font-weight-bold">Research Excellence Award </div>
+										<div class="resume-degree-time text-muted">Department of Psychology, ASU | 2017</div>
+									</li>
+
+									<li class="mb-3">
+										<div class="resume-degree font-weight-bold">Brain Korea 21+ Scholarship</div>
+										<div class="resume-degree-time text-muted">Ministry of Science, ICT, and Future Planning | 2015-2017</div>
+									</li>
+
 								</ul>
 							</section><!--//awards-section-->
 
