--- a/index.html
+++ b/index.html
@@ -59,12 +59,14 @@
 						</div><!--//col-->
 					</div>
 				</div><!--//resume-intro-->
+
 				<hr>
 				<div class="resume-body">
 					<div class="row">
 						<div class="resume-main col-12 col-lg-8 col-xl-9   pe-0   pe-lg-5">
 							<section class="education-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">Education</h3>
+
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Ph.D. Social Psychology, Arizona State University</h4>
@@ -101,7 +103,8 @@
 
 							<section class="awards-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">Honors & Awards</h3>
-								<ul class="list-unstyled resume-education-list">
+								<ul class="list-unstyled resume-awards-list">
+
 									<li class="mb-3">
 										<div class="resume-degree font-weight-bold">Faculty Women’s Association Distinguished Graduate Student Award</div>
 										<div class="resume-degree-time text-muted">ASU | 2022</div>
@@ -157,7 +160,7 @@
 
 									<div class="item-content">
 										<p> <strong>Ko, A.</strong>, Pick, C. M., Kwon, J. Y., Barlev, M., Krems, J. A., Varnum, M. E., ... & Kenrick, D. T. (2020)</P>
-										<P> <i>Perspectives on Psychological Science, 15</i>(1), 173-201. </p>
+										<P> <i>Perspectives on Psychological Science, 15</i>(1), 173-201. <a href="https://doi.org/10.1177/1745691619872986" class="theme-link" target = "_blank" rel = "noopener noreferrer"> READ </a></p>
 									</div>
 								</div><!--//item-->
 
