--- a/index.html
+++ b/index.html
@@ -142,6 +142,12 @@
 											</ul>
 										</div><!--//item-->
 										<div class="item">
+											<h4 class="item-title">Culture & Ecology</h4>
+											<ul class="list-unstyled resume-lab-list">
+												<li class="mb-2">Michael E. W. Varnum</li>
+												</ul>
+											</div><!--//item-->
+										<div class="item">
 											<h4 class="item-title">Happiness & Culture</h4>
 											<ul class="list-unstyled resume-lab-list">
 												<li class="mb-2">Eunkook M. Suh</li>
