--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
 							<section class="lab-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">Lab</h3>
 								<div class="item">
-									<h4 class="item-title">Evolution, Ecology, and Social Behavior</h4>
+									<h4 class="item-title">Evolution, Ecology, & Social Behavior Lab</h4>
 									<ul class="list-unstyled resume-lab-list">
 										<li class="mb-2">Steven L. Neuberg</li>
 										</ul>
 									</div><!--//item-->
 									<div class="item">
-										<h4 class="item-title">Evolutionary Social Cognition</h4>
+										<h4 class="item-title">Evolutionary Social Cognition Lab</h4>
 										<ul class="list-unstyled resume-lab-list">
 											<li>Douglas T. Kenrick</li>
 											<li>Steven L. Neuberg</li>
@@ -142,13 +142,13 @@
 											</ul>
 										</div><!--//item-->
 										<div class="item">
-											<h4 class="item-title">Culture & Ecology</h4>
+											<h4 class="item-title">Culture & Ecology Lab</h4>
 											<ul class="list-unstyled resume-lab-list">
 												<li class="mb-2">Michael E. W. Varnum</li>
 												</ul>
 											</div><!--//item-->
 										<div class="item">
-											<h4 class="item-title">Happiness & Culture</h4>
+											<h4 class="item-title">Happiness & Culture Lab</h4>
 											<ul class="list-unstyled resume-lab-list">
 												<li class="mb-2">Eunkook M. Suh</li>
 												</ul>
